--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.8.1
 certifi==2024.6.2
 charset-normalizer==3.3.2
 Django==4.2
+gunicorn==22.0.0
 idna==3.7
+packaging==24.1
 psycopg2==2.9.9
 requests==2.32.3
 sqlparse==0.5.0
